WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156869
Intrinsic content height computation should ignore box-sizing value
https://bugs.webkit.org/show_bug.cgi?id=156869
Summary
Intrinsic content height computation should ignore box-sizing value
Dave Hyatt
Reported
2016-04-21 14:15:21 PDT
We already get passed in the content height, so subtracting out borders/padding from that value because of box-sizing results in an incorrect value.
Attachments
Patch
(1.04 KB, patch)
2016-04-21 14:16 PDT
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch
(3.57 KB, patch)
2016-04-22 08:50 PDT
,
Dave Hyatt
zalan
: review+
Details
Formatted Diff
Diff
Patch
(3.60 KB, patch)
2016-04-22 11:42 PDT
,
Dave Hyatt
zalan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-04-21 14:15:38 PDT
This breaks messenger.com on Facebook.
Dave Hyatt
Comment 2
2016-04-21 14:16:08 PDT
Created
attachment 276958
[details]
Patch
Dave Hyatt
Comment 3
2016-04-22 08:47:51 PDT
This is the cause of: <
rdar://problem/23204668
> REGRESSION (
r189567
): The top of Facebook's messenger.com looks visually broken in some window sizes
Dave Hyatt
Comment 4
2016-04-22 08:50:38 PDT
Created
attachment 277063
[details]
Patch
Dave Hyatt
Comment 5
2016-04-22 08:57:56 PDT
Fixed in
r199877
.
WebKit Commit Bot
Comment 6
2016-04-22 10:51:27 PDT
Re-opened since this is blocked by
bug 156918
Ryan Haddad
Comment 7
2016-04-22 11:24:35 PDT
***
Bug 156917
has been marked as a duplicate of this bug. ***
Dave Hyatt
Comment 8
2016-04-22 11:42:54 PDT
Created
attachment 277081
[details]
Patch I uploaded the wrong patch. The real fix was more low-level in order to apply everywhere.
Dave Hyatt
Comment 9
2016-04-22 12:42:12 PDT
Landed in
r199895
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug