REGRESSION (r189567): The top of Facebook's messenger.com looks visually broken https://bugs.webkit.org/show_bug.cgi?id=156869 <rdar://problem/23204668>

Reviewed by Zalan Bujtas.

Source/WebCore:

Added fast/block/min-content-with-box-sizing.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeContentLogicalHeight):

LayoutTests:

* fast/block/min-content-with-box-sizing-expected.html: Added.
* fast/block/min-content-with-box-sizing.html: Added.



Canonical link: https://commits.webkit.org/175007@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199877 268f45cc-cd09-0410-ab3c-d52691b4dbfc